--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -232,6 +232,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('admin') }}">Dashboard</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('admin_settings') }}">Settings</a>
+                    </li>
                 </ul>
             </div>
         </div>
